[!] 换取测试思路

--- a/children.html
+++ b/children.html
@@ -5,7 +5,7 @@
     <body>
         adsfjkladfjsklasdfjkl;jklasdvjklcvxjklvcdjkladsfssssss
         <script>
-            window.parent.location.href = "http://www.qq.com";
+            window.open('_top','http://www.baidu.com');
         </script>
     </body>
 </html>
