--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ layout: default
 
 <div class="home" id="home">
     <div class="header">
-        <h1 class="pageTitle">Dion</h1>
+        <h1 class="pageTitle">D.Z</h1>
         <div class="media-links"> 
             <ul class="noList"> 
                     <li>
